19th commit (Almost final version of the system)